--- a/test_controller/index.html
+++ b/test_controller/index.html
@@ -6,6 +6,8 @@
   <title>My HTML File</title>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.js"></script>
+  <script src="./ui-bootstrap-tpls-0.11.0.min.js"></script>
   <script src="./myApp.js"></script>
 </head>
 <body>
@@ -33,9 +35,26 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
+            <li class="dropdown">
+              <a href class="dropdown-toggle" >
+                Dropdown 1
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="#ctrl1">Ctrl 1</a></li>
+                <li><a href="#ctrl2">Ctrl 2</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href class="dropdown-toggle" >
+                Dropdown 2
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href="/ctrl1">Ctrl 1</a></li>
+                <li><a href="/ctrl2">Ctrl 2</a></li>
+              </ul>
+            </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="./">Default</a></li>
@@ -50,64 +69,7 @@
     <div class="jumbotron">
       <p>Nothing here {{'yet' + '!'}}</p>
 
-      <div ng-controller="MyCtrl1">
-        <form role="form">
-          <div class="form-group">
-            <label for="message">{{msg}}</label>
-            <input type="text" class="form-control" id="message" placeholder="Message" ng-model="data.message">
-          </div>
-          <div class="form-group">
-            <p class="help-block">Example block-level help text here.</p>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Check me out
-            </label>
-          </div>
-          <button type="submit" class="btn btn-default" ng-click="send(data.message)">Submit</button>
-          <button type="submit" class="btn btn-default" ng-click="add()">Add</button>
-        </form>
-
-        <table class="table" ng-repeat="item in items">
-          <tr>
-            <td class="col-md-1">{{$index+1}}</td>
-            <td class="col-md-3">{{item.col1}}</td>
-            <td class="col-md-3">{{item.col2}}</td>
-            <td class="col-md-4"><img src="./firefox.thumbnail.gif" width="64" height="64"/></td>
-            <td class="col-md-1"><button type="submit" class="btn btn-default" ng-click="remove($index)">Remove</button></td>
-          <tr>
-        </table>
-
-        <div class="row">
-          <div class="col-md-6">
-              Here your text
-          </div>
-          <div class="col-md-4">
-            <img src="./firefox.thumbnail.gif" width="64" height="64"/>
-          </div>
-          <div class="col-md-2">
-            <button type="submit" class="btn btn-default" ng-click="send(data.message)">Submit</button>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6">
-              Here your text2
-          </div>
-          <div class="col-md-6">
-              <img src="./firefox.thumbnail.gif" width="80" height="80"/>
-          </div>
-        </div>
-
-      </div>
-
-      <div ng-controller="MyCtrl2">
-        <form role="form">
-          <div class="form-group">
-            <label for="message">{{data.message}}</label>
-          </div>
-        </form>
-      </div>
+      <div ng-view></div>
     </div>
 
   </div>
